Update .gitignore ClinicApp

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,43 @@
-/dist
-/node_modules
-/vendor
-/.env
-/.idea
-/.vscode
-/storage/*.key
-/public/storage
-/storage/framework/sessions/*
-/storage/framework/views/*
-/storage/logs/*
+# Archivos generales
 .DS_Store
-.env.local
-.env.*.local
+Thumbs.db
+*.log
+*.sqlite
+*.sqlite-journal
+
+# Entornos virtuales
+.env
+.env.*
+!.env.example
+.venv/
+venv/
+
+# Dependencias
+node_modules/
+vendor/
 composer.lock
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+package-lock.json
+yarn.lock
+
+# Entornos de desarrollo
+.idea/
+.vscode/
+.fleet/
+.nova/
+.zed/
+
+# Builds y compilaciones
+/dist/
+/dist-ssr/
+/public/build/
+/public/hot/
+/storage/framework/cache/
+/storage/framework/sessions/
+/storage/framework/views/
+/storage/pail/
+/coverage/
+
+# Archivos de sistema
+Homestead.json
+Homestead.yaml
+auth.json
